# issue-detection

./: .gitignore  README.md  pyproject.toml
src/issue_detection/: bar_chart.py  data_processing.py  fetch_data.py  main.py  streamlit_app.py  tag_generation.py  visualization.py
src/issue_detection/prompts/: clean_up.txt  sentiment.txt  tagger.txt  tagger_old.txt
tests/json/: tags.json  test.json
