[tool.poetry]
name = "issue-detection"
version = "0.1.0"
description = ""
authors = ["howardat <olzhas.nurzhanovich.kakimzhanov@gmail.com>"]
readme = "README.md"
packages = [{ include = "issue_detection", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
requests = "^2.32.5"
streamlit = "^1.53.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
